--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <p class="footer__text">Все права защищены.</p>
           </div>
         </div>
-        <p class="footer__text">Сделано в Ивановым Иваном</p>
+        <p class="footer__text"><a href="https://web.telegram.org/" class="footer__cite">Сделано в Ивановым Иваном</a></p>
         <div class="contacts__wrapper">
           <a href="tel:+79625561234" class="contacts__number">+7 (962) 556 - 1234</a>
           <button class="contacts__button">Перезвоните мне</button>
