--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <section class="top section-bg">
     <div class="container">
       <header class="top__contacts contacts">
-        <a href="#" class="logo">
-          <img src="img/ico/Logo.svg" alt="логотип">
+        <a href="#">
+          <img class="logo" src="img/ico/Logo.svg" alt="логотип">
         </a>
         <div class="contacts__wrapper">
           <a href="tel:89625561234" class="contacts__number">+7 (962) 556 - 1234</a>
@@ -86,7 +86,7 @@
             <input class="bottom__input" type="email" name="email" placeholder="E-mail" required>
           </fieldset>
           <div class="button-wrapper">
-            <button class="button" type="submit">позвоните мне</button>
+            <button class="button bottom__button" type="submit">позвоните мне</button>
           </div>
         </form>
       </div>
@@ -106,7 +106,8 @@
             <p class="footer__text">Все права защищены.</p>
           </div>
         </div>
-        <p class="footer__text"><a href="https://web.telegram.org/" class="footer__cite">Сделано в Ивановым Иваном</a></p>
+        <p class="footer__text"><a href="https://web.telegram.org/" class="footer__cite">Сделано в Ивановым Иваном</a>
+        </p>
         <div class="contacts__wrapper">
           <a href="tel:+79625561234" class="contacts__number">+7 (962) 556 - 1234</a>
           <button class="contacts__button">Перезвоните мне</button>
