--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="#">
           <img class="logo" src="img/ico/Logo.svg" alt="логотип">
         </a>
+        <a href="tel:89625561234" class="contacts__img"><img src="img/ico/Phone.svg" alt="позвоните мне"></a>
         <div class="contacts__wrapper">
           <a href="tel:89625561234" class="contacts__number">+7 (962) 556 - 1234</a>
           <button class="contacts__button">Перезвоните мне</button>
@@ -96,7 +97,7 @@
   </section>
   <footer class="footer">
     <div class="container">
-      <div class="contacts">
+      <div class="contacts footer__contacts">
         <div class="footer__wrapper">
           <a href="#" class="logo logo-footer">
             <img src="img/ico/Logo.svg" alt="логотип">
@@ -106,9 +107,12 @@
             <p class="footer__text">Все права защищены.</p>
           </div>
         </div>
-        <p class="footer__text"><a href="https://web.telegram.org/" class="footer__cite">Сделано в Ивановым Иваном</a>
+        <a href="tel:89625561234" class="contacts__img"><img src="img/ico/Phone.svg" alt="позвоните мне"></a>
+        <p class="footer__text footer__cite"><a href="https://web.telegram.org/">Сделано в Ивановым Иваном</a>
         </p>
         <div class="contacts__wrapper">
+          <a href="tel:89625561234" class="contacts__img contacts-bottom"><img src="img/ico/Phone.svg"
+              alt="позвоните мне"></a>
           <a href="tel:+79625561234" class="contacts__number">+7 (962) 556 - 1234</a>
           <button class="contacts__button">Перезвоните мне</button>
         </div>
