добавил @media, сделал псевдоэлементы в about.css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="tel:89625561234" class="contacts__img"><img src="img/ico/Phone.svg" alt="позвоните мне"></a>
         <div class="contacts__wrapper">
           <a href="tel:89625561234" class="contacts__number">+7 (962) 556 - 1234</a>
-          <button class="contacts__button">Перезвоните мне</button>
+          <a href="#contacts" class="contacts__button">Перезвоните мне</a>
         </div>
       </header>
       <div class="main-wrapper">
@@ -31,67 +31,58 @@
         <p class="text">Описания предлжения компании. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру
           сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему.</p>
         <div class="button-wrapper">
-          <a href="#center" class="button">Подробнее</a>
+          <a href="#calls" class="button">Подробнее</a>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="center" class="center">
+  <section id="about" class="about">
     <div class="container">
-      <h2 class="center__title">Уникальный заголовок для преимущества компании</h2>
-      <div class="center__wrapper">
-        <p class="center__text center__about">О нас</p>
-        <p class="center__text center__text-main">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру
+      <h2 class="about__title">Уникальный заголовок для преимущества компании</h2>
+      <div class="about__wrapper">
+        <p class="about__text about__us">О нас</p>
+        <p class="about__text about__text-main">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру
           сгенерировать несколько абзацев
           более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить.</p>
       </div>
-      <ul class="center__list">
-        <li class="center__item">
-          <div class="center__img">
-            <p class="centr__img-text">1</p>
-          </div>
-          <p class="center__text center__item-text">Первое целевое преимущество</p>
+      <ul class="about__list">
+        <li class="about__item">
+          <span class="about__text about__item-text">Первое целевое преимущество</span>
         </li>
-        <li class="center__item">
-          <div class="center__img">
-            <p class="centr__img-text">2</p>
-          </div>
-          <p class="center__text center__item-text">Второе целевое преимущество</p>
+
+        <li class="about__item">
+          <span class="about__text about__item-text">Второе целевое преимущество</span>
         </li>
-        <li class="center__item">
-          <div class="center__img">
-            <p class="centr__img-text">3</p>
-          </div>
-          <p class="center__text center__item-text">Третье целевое преимущество</p>
+
+        <li class="about__item">
+          <span class="about__text about__item-text">Третье целевое преимущество</span>
         </li>
-        <li class="center__item">
-          <div class="center__img">
-            <p class="centr__img-text">4</p>
-          </div>
-          <p class="center__text center__item-text">Четвертое целевое преимущество</p>
+
+        <li class="about__item">
+          <span class="about__text about__item-text">Четвертое целевое преимущество</span>
         </li>
       </ul>
     </div>
   </section>
 
-  <section class="bottom section-bg">
+  <section class="calls section-bg">
     <div class="container">
-      <h2 class="bottom__title">Остались вопросы?</h2>
-      <p class="bottom__text">Оставьте номер телефона, и мы перезвоним вам</p>
-      <div class="bottom__wrapper">
-        <form name="bottom__form" action="https://jsonplaceholder.typicode.com/posts" method="post">
-          <fieldset class="bottom__input-wrapper">
-            <input class="bottom__input" type="text" name="name" placeholder="Ваше имя" required>
-            <input class="bottom__input" type="tel" name="tel" placeholder="Телефон" required>
-            <input class="bottom__input" type="email" name="email" placeholder="E-mail" required>
+      <h2 class="calls__title">Остались вопросы?</h2>
+      <p class="calls__text">Оставьте номер телефона, и мы перезвоним вам</p>
+      <div class="calls__wrapper">
+        <form name="calls__form" action="https://jsonplaceholder.typicode.com/posts" method="post">
+          <fieldset class="calls__input-wrapper">
+            <input class="calls__input" type="text" name="name" placeholder="Ваше имя" required>
+            <input class="calls__input" type="tel" name="tel" placeholder="Телефон" required>
+            <input class="calls__input" type="email" name="email" placeholder="E-mail" required>
           </fieldset>
           <div class="button-wrapper">
             <button class="button bottom__button" type="submit">позвоните мне</button>
           </div>
         </form>
       </div>
-      <p class="bottom__text-confirmation">Я даю своё <a href="#" class="confirmation">согласие</a> на обработку моих
+      <p class="calls__text-confirmation">Я даю своё <a href="#" class="confirmation">согласие</a> на обработку моих
         персональных данных.</p>
     </div>
   </section>
@@ -111,10 +102,8 @@
         <p class="footer__text footer__cite"><a href="https://web.telegram.org/">Сделано в Ивановым Иваном</a>
         </p>
         <div class="contacts__wrapper">
-          <a href="tel:89625561234" class="contacts__img contacts-bottom"><img src="img/ico/Phone.svg"
-              alt="позвоните мне"></a>
           <a href="tel:+79625561234" class="contacts__number">+7 (962) 556 - 1234</a>
-          <button class="contacts__button">Перезвоните мне</button>
+          <a href="#calls" class="contacts__button">Перезвоните мне</a>
         </div>
       </div>
     </div>
