--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <a href="#">
           <img class="logo" src="img/ico/Logo.svg" alt="логотип">
         </a>
-        <a href="tel:89625561234" class="contacts__img"><img src="img/ico/Phone.svg" alt="позвоните мне"></a>
+        <a href="tel:+79625561234" class="contacts__img"><img src="img/ico/Phone.svg" alt="позвоните мне"></a>
         <div class="contacts__wrapper">
-          <a href="tel:89625561234" class="contacts__number">+7 (962) 556 - 1234</a>
-          <a href="#contacts" class="contacts__button">Перезвоните мне</a>
+          <a href="tel:+79625561234" class="contacts__number">+7 (962) 556 - 1234</a>
+          <a href="#calls" class="contacts__button">Перезвоните мне</a>
         </div>
       </header>
       <div class="main-wrapper">
@@ -31,7 +31,7 @@
         <p class="text">Описания предлжения компании. Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру
           сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему.</p>
         <div class="button-wrapper">
-          <a href="#calls" class="button">Подробнее</a>
+          <a href="#about" class="button">Подробнее</a>
         </div>
       </div>
     </div>
@@ -66,7 +66,7 @@
     </div>
   </section>
 
-  <section class="calls section-bg">
+  <section class="calls section-bg" id="calls">
     <div class="container">
       <h2 class="calls__title">Остались вопросы?</h2>
       <p class="calls__text">Оставьте номер телефона, и мы перезвоним вам</p>
