исправил название класса

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <input class="calls__input" type="email" name="email" placeholder="E-mail" required>
           </fieldset>
           <div class="button-wrapper">
-            <button class="button bottom__button" type="submit">позвоните мне</button>
+            <button class="button calls__button" type="submit">позвоните мне</button>
           </div>
         </form>
       </div>
