--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <a href="#">
           <img class="logo" src="img/ico/Logo.svg" alt="логотип">
         </a>
-        <a href="tel:+79625561234" class="contacts__img"><img src="img/ico/Phone.svg" alt="позвоните мне"></a>
         <div class="contacts__wrapper">
-          <a href="tel:+79625561234" class="contacts__number">+7 (962) 556 - 1234</a>
+          <a href="tel:+79625561234" class="contacts__link">
+            <span class="contacts__number">+7 (962) 556 - 1234</span></a>
           <a href="#calls" class="contacts__button">Перезвоните мне</a>
         </div>
       </header>
@@ -98,11 +98,11 @@
             <p class="footer__text">Все права защищены.</p>
           </div>
         </div>
-        <a href="tel:89625561234" class="contacts__img"><img src="img/ico/Phone.svg" alt="позвоните мне"></a>
         <p class="footer__text footer__cite"><a href="https://web.telegram.org/">Сделано в Ивановым Иваном</a>
         </p>
         <div class="contacts__wrapper">
-          <a href="tel:+79625561234" class="contacts__number">+7 (962) 556 - 1234</a>
+          <a href="tel:+79625561234" class="contacts__link">
+            <span class="contacts__number">+7 (962) 556 - 1234</span></a>
           <a href="#calls" class="contacts__button">Перезвоните мне</a>
         </div>
       </div>
